2008-10-10  Miguel de Icaza  <miguel@novell.com>

	* Split functionality that is operating system specific into
	-win32.c, -unix.c and -posix.c 

	* Use g_malloc everywhere, and g_free, so that these can be easily
	overwritten consistently.

2008-09-16  Bill Holmes  <billholmes54@gmail.com>

	* src/gunicode.c : Fix a warning.

	Contributed under MIT/X11 license.

2008-08-28  Bill Holmes  <billholmes54@gmail.com>

	* src/glib.h : Adding a c++ definition for G_BEGIN_DECLS.

	Contributed under MIT/X11 license.

2008-08-27  Bill Holmes  <billholmes54@gmail.com>

	* glib.h, gunicode.c : Fixing some compiler errors.

	Contributed under MIT/X11 license.

2008-08-20  Mike Voorhees <vernish13@gmail.com>

	* Patch from Mike Voorhees to fix various problems with
	g_utf8_validate compared to the glib implementation and unit tests
	to ensure that there are no regressions.

	From a mailing list post to mono-devel-list on August 19th, 2008

	[Mono-dev] utf8 related patches. Please review.

2008-08-20  Mike Voorhees  <vernish13@gmail.com>

	* src/glib.h : Adding declarations for g_utf8_strlen, g_utf8_get_char,
	and g_utf8_next_char.

	* src/gunicode.c : Adding implementation for g_utf8_strlen, g_utf8_get_char,
	and g_utf8_next_char.

	* src/gunicode.c : Rewrote g_utf8_validate.

	* test/utf8.c Adding tests for g_utf8_strlen, g_utf8_get_char,
	g_utf8_next_char, and g_utf8_validate.

	Contributed under MIT/X11 license.
	
2008-08-05  Andreas Faerber  <andreas.faerber@web.de>

	* autogen.sh: Suppress arguments warning for NOCONFIGURE.
	
	Contributed under MIT/X11 license.

2008-08-04  Bill Holmes  <billholmes54@gmail.com>

	* test/tests.h, test/Makefile.am, test/memory.c : Adding memory tests to test
	  allocation routines return NULL when 0 size is passed in.

	Contributed under MIT/X11 license.

2008-08-04  Bill Holmes  <billholmes54@gmail.com>

	* src/glib.h : Changing the allocation routines to return null if 0 size is
	  passed in.

	Contributed under MIT/X11 license.
