@@ -27,4 +27,7 @@ const gchar *g_module_error (void);
 gboolean g_module_close (GModule *module);
 gchar *  g_module_build_path (const gchar *directory, const gchar *module_name);
 
+extern char *gmodule_libprefix;
+extern char *gmodule_libsuffix;
+
 #endif
